@@ -41,6 +41,9 @@
 # directory of CruiseControl's lib and dist directories.
 CCDIR=`pwd`
 
+# Uncomment the following line if you have OutOfMemoryError errors
+# CC_OPTS="-Xms128m -Xmx256m"
+
 LIBDIR=$CCDIR/lib
 
 # convert the existing path to unix
@@ -55,6 +58,6 @@ if [ `uname | grep -n CYGWIN` ]; then
   CRUISE_PATH=`cygpath --path --windows "$CRUISE_PATH"`
 fi
 
-EXEC="$JAVA_HOME/bin/java -cp $CRUISE_PATH -Djavax.management.builder.initial=mx4j.server.MX4JMBeanServerBuilder CruiseControlWithJetty $@"
+EXEC="$JAVA_HOME/bin/java $CC_OPTS -cp $CRUISE_PATH -Djavax.management.builder.initial=mx4j.server.MX4JMBeanServerBuilder CruiseControlWithJetty $@"
 echo $EXEC
 exec $EXEC
